--- a/admin/package.json
+++ b/admin/package.json
@@ -13,22 +13,22 @@
     "analyze": "ANALYZE_BUNDLE=true npm run build"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.2",
-    "@material-ui/icons": "4.11.2",
-    "axios": "0.21.1",
-    "core-js": "3.8.1",
-    "history": "4.10.1",
-    "qs": "6.8.0",
-    "query-string": "6.13.1",
-    "ra-input-rich-text": "3.3.1",
-    "ra-language-english": "3.10.4",
-    "react": "17.0.1",
-    "react-admin": "3.10.4",
-    "react-dom": "17.0.1",
-    "react-redux": "7.1.1",
-    "redux-actions": "2.6.5",
-    "redux-saga": "1.1.3",
-    "styled-components": "5.2.3"
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "core-js": "^3.8.1",
+    "history": "^4.10.1",
+    "qs": "^6.8.0",
+    "query-string": "^6.13.1",
+    "ra-input-rich-text": "^3.3.1",
+    "ra-language-english": "^3.10.4",
+    "react": "^17.0.1",
+    "react-admin": "^3.10.4",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/cli": "7.12.10",
@@ -69,17 +69,18 @@
     "eslint-config-prettier": "7.0.0",
     "eslint-config-standard": "16.0.2",
     "eslint-loader": "4.0.2",
-    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.20.3",
+    "favicons-webpack-plugin": "5.0.2",
     "fork-ts-checker-webpack-plugin": "6.2.5",
     "html-webpack-plugin": "5.3.1",
     "jest": "26.1.0",
     "mini-css-extract-plugin": "1.6.0",
     "prettier": "2.2.1",
-    "react-refresh": "0.10.0",
+    "react-refresh": "0.8.3",
     "source-map-loader": "2.0.1",
     "style-loader": "2.0.0",
     "typescript": "4.1.3",
@@ -87,6 +88,7 @@
     "webpack-bundle-analyzer": "4.4.1",
     "webpack-cli": "4.6.0",
     "webpack-dev-server": "3.11.2",
+    "webpack-pwa-manifest": "4.3.0",
     "workbox-webpack-plugin": "6.1.5"
   }
 }
