--- a/admin/package.json
+++ b/admin/package.json
@@ -8,14 +8,14 @@
     "test": "echo TODO run tests but not cypress",
     "cypress:run": "echo NOTE: Cypress disabled for admin by default. Add cypress to dockerfiles and run \\'cypress run\\' here. See client as an example.",
     "cypress:open": "echo NOTE: Cypress disabled for admin by default. Add cypress to dockerfiles and run \\'cypress open\\' here. See client as an example.",
-    "start": "NODE_ENV=development webpack-dev-server --env.development",
-    "build": "NODE_ENV=production webpack -p --env.production",
+    "start": "NODE_ENV=development webpack serve --mode development",
+    "build": "NODE_ENV=production webpack --mode production --progress",
     "analyze": "ANALYZE_BUNDLE=true npm run build"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "core-js": "^3.8.1",
     "history": "^4.10.1",
     "qs": "^6.8.0",
@@ -25,67 +25,70 @@
     "react": "^17.0.1",
     "react-admin": "^3.10.4",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.12.11",
-    "react-redux": "^7.2.0",
-    "redux-actions": "2.6.5",
+    "react-redux": "^7.2.4",
+    "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.10",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/history": "^4.7.3",
-    "@types/jest": "^26.0.18",
-    "@types/lodash": "^4.14.157",
-    "@types/node": "^14.14.11",
-    "@types/qs": "^6.9.3",
-    "@types/query-string": "^6.3.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.2",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
+    "@babel/cli": "7.12.10",
+    "@babel/core": "7.12.10",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
+    "@babel/preset-typescript": "7.12.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@types/history": "4.7.3",
+    "@types/jest": "26.0.18",
+    "@types/lodash": "4.14.157",
+    "@types/node": "14.14.11",
+    "@types/qs": "6.9.3",
+    "@types/query-string": "6.3.0",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-redux": "7.1.2",
+    "@types/react-router": "5.1.8",
+    "@types/react-router-dom": "5.1.5",
     "@types/redux-actions": "2.6.1",
-    "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@types/styled-components": "5.1.0",
+    "@typescript-eslint/eslint-plugin": "4.11.1",
+    "@typescript-eslint/parser": "4.11.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-macros": "^3.0.0",
-    "babel-plugin-styled-components": "^1.12.0",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.2",
+    "babel-plugin-dynamic-import-node": "2.3.3",
+    "babel-plugin-macros": "3.0.1",
+    "babel-plugin-styled-components": "1.12.0",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "css-loader": "^3.5.3",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.2.0",
+    "clean-webpack-plugin": "4.0.0-alpha.0",
+    "css-loader": "5.2.4",
+    "eslint": "7.15.0",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-config-standard": "16.0.2",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.4",
-    "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.0.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "prettier": "^2.2.1",
-    "source-map-loader": "0.2.4",
-    "style-loader": "^1.2.1",
-    "typescript": "^4.1.2",
-    "favicons-webpack-plugin": "4.2.0",
-    "webpack": "^4.39.2",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "eslint-plugin-react": "7.20.3",
+    "favicons-webpack-plugin": "5.0.2",
+    "fork-ts-checker-webpack-plugin": "6.2.5",
+    "html-webpack-plugin": "5.3.1",
+    "jest": "26.1.0",
+    "mini-css-extract-plugin": "1.6.0",
+    "prettier": "2.2.1",
+    "react-refresh": "0.8.3",
+    "source-map-loader": "2.0.1",
+    "style-loader": "2.0.0",
+    "typescript": "4.1.3",
+    "webpack": "5.36.2",
+    "webpack-bundle-analyzer": "4.4.1",
+    "webpack-cli": "4.6.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-pwa-manifest": "4.3.0",
+    "workbox-webpack-plugin": "6.1.5"
   }
 }
