--- a/admin/package.json
+++ b/admin/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-prettier": "3.2.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.20.3",
+    "favicons": "6.2.1",
     "favicons-webpack-plugin": "5.0.2",
     "fork-ts-checker-webpack-plugin": "6.2.5",
     "html-webpack-plugin": "5.3.1",
