--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
-    "@sentry/node": "^5.29.0",
+    "@sentry/node": "^6.5.0",
     "aws-sdk": "^2.807.0",
     "axios": "^0.21.0",
     "bunyan": "^1.8.14",
     "koa": "^2.13.0",
-    "koa-joi-router": "^7.0.0",
+    "koa-joi-router": "^8.0.0",
     "koa-qs": "^3.0.0",
     "lodash": "^4.17.15",
     "mustache": "^4.1.0",
@@ -35,30 +35,30 @@
   "devDependencies": {
     "@types/bunyan": "1.8.6",
     "@types/jest": "^26.0.18",
-    "@types/joi": "^14.3.4",
+    "@types/joi": "^17.2.3",
     "@types/koa": "^2.11.3",
-    "@types/koa-joi-router": "^5.2.3",
+    "@types/koa-joi-router": "^8.0.0",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "^7.4.1",
     "@types/lodash": "^4.14.157",
     "@types/mustache": "^4.1.0",
-    "@types/node": "^14.14.11",
-    "@types/pg": "^7.14.7",
+    "@types/node": "^15.6.1",
+    "@types/pg": "^8.6.0",
     "@types/showdown": "1.9.3",
     "@types/stack-trace": "0.0.29",
     "@types/uuid": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-promise": "4.2.1",
-    "jest": "^26.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "jest": "^27.0.3",
     "prettier": "^2.2.1",
-    "ts-jest": "^26.1.1",
+    "ts-jest": "^27.0.2",
     "ts-node-dev": "^1.1.0",
     "typescript": "^4.1.2"
   }
