--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "install-clean": "echo '# Nothing to cleanup'",
     "install-ci": "npm-run-all install-all:shared",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm run install-all",
-    "install-all": "npm-run-all install-all:admin install-all:client install-all:graphql install-all:shared install-all:server install-all:worker install-all:www ",
+    "install-all": "npm-run-all install-all:admin install-all:client install-all:shared install-all:server install-all:worker install-all:www ",
     "install-all:admin": "cd admin && npm install",
     "install-all:client": "cd client && npm install",
-    "install-all:graphql": "cd graphql && npm install",
     "install-all:server": "cd server && npm install",
     "install-all:shared": "cd shared && npm install",
     "install-all:worker": "cd worker && npm install",
@@ -20,24 +19,21 @@
     "generate-db-classes": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate ]; then taito ${taito_options} exec:server ./generate; fi",
     "info:local": "yes | taito ${taito_options} secret show:${taito_env}",
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
-    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:graphql lint:server lint:worker lint:www ",
+    "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:server lint:worker lint:www ",
     "lint:admin": "cd admin && npm run lint",
     "lint:client": "cd client && npm run lint",
-    "lint:graphql": "cd graphql && npm run lint",
     "lint:server": "cd server && npm run lint",
     "lint:worker": "cd worker && npm run lint",
     "lint:www": "cd www && npm run lint",
-    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:graphql unit:server unit:worker unit:www ",
+    "unit": "echo Running unit tests locally && npm-run-all --parallel unit:admin unit:client unit:server unit:worker unit:www ",
     "unit:admin": "cd admin && npm run unit",
     "unit:client": "cd client && npm run unit",
-    "unit:graphql": "cd graphql && npm run unit",
     "unit:server": "cd server && npm run unit",
     "unit:worker": "cd worker && npm run unit",
     "unit:www": "cd www && npm run unit",
-    "test": "npm-run-all test:admin test:client test:graphql test:server test:worker test:www ",
+    "test": "npm-run-all test:admin test:client test:server test:worker test:www ",
     "test:admin": "taito ${taito_options} util test:admin:${taito_env}",
     "test:client": "taito ${taito_options} util test:client:${taito_env}",
-    "test:graphql": "taito ${taito_options} util test:graphql:${taito_env}",
     "test:server": "taito ${taito_options} util test:server:${taito_env}",
     "test:worker": "echo DISABLED taito ${taito_options} util test:worker:${taito_env}",
     "test:www": "echo DISABLED taito ${taito_options} util test:www:${taito_env}",
@@ -47,11 +43,10 @@
     "code-check": "docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate engines:install && docker run --interactive --tty --rm --env CODECLIMATE_CODE=\"$PWD\" --volume \"$PWD\":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze",
     "taito-host-code-check": "npm run code-check",
     "_dep-check_comment": "TODO how to pass -u argument from dep-check to dep-check:TARGET?",
-    "dep-check": "npm-run-all \"dep-check:root {@}\" \"dep-check:admin {@}\" \"dep-check:client {@}\" \"dep-check:graphql {@}\" \"dep-check:server {@}\" \"dep-check:worker {@}\" \"dep-check:www {@}\" -- ",
+    "dep-check": "npm-run-all \"dep-check:root {@}\" \"dep-check:admin {@}\" \"dep-check:client {@}\" \"dep-check:server {@}\" \"dep-check:worker {@}\" \"dep-check:www {@}\" -- ",
     "dep-check:root": "npm run _dep-check-script -- . ",
     "dep-check:admin": "npm run _dep-check-script -- admin ",
     "dep-check:client": "npm run _dep-check-script -- client ",
-    "dep-check:graphql": "npm run _dep-check-script -- graphql ",
     "dep-check:server": "npm run _dep-check-script -- server ",
     "dep-check:worker": "npm run _dep-check-script -- worker ",
     "dep-check:www": "npm run _dep-check-script -- www ",
