fix: move shared types back to shared

--- a/admin/tsconfig.json
+++ b/admin/tsconfig.json
@@ -12,8 +12,11 @@
     "moduleResolution": "node",
     "allowJs": true,
     "resolveJsonModule": true,
-    "strictNullChecks": true,
     "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "baseUrl": "./",
     "typeRoots": ["./src/types", "./node_modules/@types"],
     "types": [
