--- a/shared/package.json
+++ b/shared/package.json
@@ -1,5 +1,8 @@
 {
   "name": "full-stack-template-shared",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "graphql": "^15.5.0",
+    "type-graphql": "^1.1.1"
+  }
 }
